@@ -11,6 +11,7 @@
 	* circuits.swap()
 	* remove deprecated 'q' param for expm
 	* allow pauliX without arg for cyclic groups
+	* circuits functions handle non-qubit case
 
 === qitensor-0.9 (Dan Stahlke, 2011-04-17) ===
 	* random_isometry
